# AntibodyDiscovery

./: .gitignore  AGENT.md  CLAUDE.md  README.md  WHERE_THINGS_RUN.md  antigen-rbm.act-pass  docker-compose.yml  setup_new_machine.sh  start.sh
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: analysis.py  artifacts.py  compute.py  datasets.py  pipelines.py  results.py  runs.py  sequences.py  tools.py  ws.py
backend/app/core/: dag.py  events.py  executor.py  molecule_key.py  results_collector.py
backend/app/db/: models.py  session.py
backend/app/models/: pipeline.py  run.py  tool_spec.py
backend/app/storage/: __init__.py  local.py
backend/app/tools/: abmap_db.py  base.py  cache.py  http_tool.py  molecule_cache.py  registry.py  subprocess_runner.py
backend/app/tools/adapters/: ablang.py  abmap.py  alphafold.py  biophi.py  compute.py  echo.py  equidock.py  esmfold.py  gromacs.py  haddock3.py  immunebuilder.py  megadock.py  pdbfixer.py  proteinmpnn.py  rfdiffusion.py  sequence_db.py  superwater.py  toolbox.py
backend/app/workers/: tasks.py
backend/tests/: test_api.py  test_dag.py
docs/: adding-tools.md  planfordatabase.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  utils.ts
infra/: docker-compose.yml
tools/ablang/: run.py  setup.sh  tool.yaml
tools/abmap/: Dockerfile  SETUP.md  server.py  start.sh  tool.yaml
tools/alphafold/: Dockerfile  server.py  tool.yaml
tools/biophi/: .venv  run.py  tool.yaml
(+83 files in other folders)
